# curso_django

./: anotacoes.md  db.sqlite3  pyproject.toml
core/: admin.py  models.py  serializer.py  views.py
core/migrations/: 0001_initial.py  0002_autor.py  0003_alter_autor_options_livro.py  0004_livro_autors.py  0005_rename_categoia_categoria.py  0006_rename_autors_livro_autores.py  0007_compra.py  0008_itenscompra.py  0009_rename_desricao_categoria_descricao.py
core/views/: __init__.py  autor.py  categoria.py  categoriaApiView.py  categoriaClass.py  categoriaGeneric.py  compra.py  editora.py  livro.py  testesIniciais.py
livraria/: asgi.py  settings.py  urls.py  wsgi.py
