[tool.poetry]
name = "livraria"
version = "0.1.0"
description = ""
authors = ["GuiDutra21 <221021984@aluno.unb.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
django = ">=6.0,<7.0"
gunicorn = ">=23.0.0,<24.0.0"
whitenoise = ">=6.11.0,<7.0.0"
djangorestframework = ">=3.16.1,<4.0.0"
black = ">=25.12.0,<26.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = ">=7.3.0,<8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
